[package]
name = "rust"
version = "0.1.0"
authors = ["zhangmingming <zhangmingming@doweidu.com>"]
edition = "2018"


[dependencies]
tokio=""
futures=""
bytes=""
log = "0.4.6"
structopt = "0.2.15"
failure = "0.1.5"
lazy_static = "1.3.0"
rust-crypto = "0.2.36"
rug = "1.5.2"
azul = { git = "https://github.com/maps4print/azul" }
flatbuffers = "0.6.0"