[package]
name = "rust"
version = "0.1.0"
authors = ["zhangmingming <zhangmingming@doweidu.com>"]
edition = "2018"
links = "vulkan"

[[bin]]
name = "rust"
path = "src/main.rs"

[[bin]]
name = "catsay"
path = "src/catsay.rs"

[[bin]]
name = "catsay-gui"
path = "src/catsay-gui.rs"

[dependencies]
#tokio=""
#futures=""
#bytes=""
#log = "0.4.6"
#structopt = "0.2.15"
failure = "0.1.8"
exitfailure = "0.5.1"
#lazy_static = "1.3.0"
#rust-crypto = "0.2.36"
#rug = "1.5.2"
#azul = { git = "https://github.com/maps4print/azul" }
#flatbuffers = "0.6.0"
#libc = "0.2.66"
#futures-preview="=0.3.0-alpha.17"
#crossbeam = "0.7.3"
structopt = "0.3.14"
colored = "1.9.3"
assert_cmd = "1.0.1"
predicates = "1.0.4"
cursive = "0.11.2"
gio = "0.6.0"

[dependencies.gtk]
version = "0.6.0" # the gtk crate version
features = ["v3_22"] # system gtk version